--- a/website/newsletter/122/index.mdx
+++ b/website/newsletter/122/index.mdx
@@ -8,7 +8,7 @@ image: /img/TWIR_POST.png
 
 Hi everyone!
 
-What a great week full of twists and turns! There are some on all sides:
+What a great week full of twists and turns!
 
 - Next.js 13 gives us access to the latest React innovations
 - Turbopack could succeed Webpack
@@ -19,6 +19,8 @@ What a great week full of twists and turns! There are some on all sides:
 I'm taking the opportunity to test a new format, please tell me what you think!
 
 Also, don't miss the big update to the Three.js Journey course with React-Three-Fiber modules. I got promo code ["TWIR"](https://threejs-journey.com/join/TWIR) for the launch. This will be the first course to be featured on a future "deals" page I'll create later.
+
+I'm testing a new format! This took much more time than usual 😅. I would really appreciate a [retweet](https://slo.im/thread), testimonial or referral to a friend if you want to support me doing this again 🙏 The bigger the newsletter, the more opportunity I have to improve it.
 
 <!-- truncate -->
 
