--- a/website/newsletter/_template/index.mdx
+++ b/website/newsletter/_template/index.mdx
@@ -66,3 +66,5 @@ import Support from "../_support.mdx";
 ## 🤭 Fun {#fun}
 
 <Todo />
+
+[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
