upgrade docusaurus - use unlisted front matter

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/123/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/123/index.mdx
@@ -4,7 +4,7 @@ title: "React Hebdo #123: ..."
 authors: [slorber]
 date: 11-07-2022
 image: /img/TWIR_POST.png
-draft: true
+unlisted: true
 ---
 
 Salut à tous !
