--- a/website/newsletter/_template/index.mdx
+++ b/website/newsletter/_template/index.mdx
@@ -4,7 +4,7 @@ title: "This Week In React #TEMPLATE: ..."
 authors: [slorber]
 date: 12-31-2030 TODO
 image: /img/TWIR_POST.png
-draft: true
+unlisted: true
 ---
 
 Hi everyone!
