--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -4,7 +4,7 @@ title: "React Hebdo #TEMPLATE: ..."
 authors: [slorber]
 date: 12-31-2030 TODO
 image: /img/TWIR_POST.png
-draft: true
+unlisted: true
 ---
 
 Salut à tous !
