--- a/website/newsletter/123/index.mdx
+++ b/website/newsletter/123/index.mdx
@@ -4,7 +4,7 @@ title: "This Week In React #123: ..."
 authors: [slorber]
 date: 11-07-2022
 image: /img/TWIR_POST.png
-draft: true
+unlisted: true
 ---
 
 Hi everyone!
