--- a/website/newsletter/123/index.mdx
+++ b/website/newsletter/123/index.mdx
@@ -49,7 +49,13 @@ You can [download it here](https://sizzy.co/?utm_campaign=newsletter&utm_source=
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![Jamf - Easily Secure and Manage Your Apple Devices](https://ucarecdn.com/f5a0c637-c59e-4b81-92d1-31bc896020c0/-/crop/250x146/0,52/-/resize/240x140/)](https://vpdae.com/redirect/p6sxgodi71psw70ruh4ypz7tfc9)
+
+**[Jamf - Easily Secure and Manage Your Apple Devices](https://vpdae.com/redirect/p6sxgodi71psw70ruh4ypz7tfc9)**
+
+Jamf Now is a mobile device management (MDM) solution for Apple devices. This solution makes device management tasks easy such as configuring Wi-Fi and email settings, deploying apps, securing sensitive company data, and enforcing passcodes. The Jamf Fundamentals plan contains additional security features including Malware Prevention to prevent malicious threats from running on your devices. Sign up and manage up to 3 devices for free and add more for just $2 per device, per month. For more power, upgrade to Jamf Fundamentals to manage 3 devices for free and add more for $4 a month per device.
+
+<img src="https://www.vpdae.com/open/5031.gif?opens=1" width="1" height="1" />
 
 ---
 
