--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/123/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/123/index.mdx
@@ -11,6 +11,10 @@ Salut à tous !
 
 Ne manquez pas non plus la grosse mise à jour du cours Three.js Journey avec les modules React-Three-Fiber. Bruno m'a partagé un code promo ["TWIR"](https://threejs-journey.com/join/TWIR) pour le lancement. Cela sera le 1er cours à figurer sur une prochaine page "deals" que je vais créer.
 
+La doc React en beta - 20 pages left: https://youtu.be/93D-XH0tNRY?t=947
+
+Next.js et React-Native: TS par défaut
+
 <Todo />
 
 <!-- truncate -->
@@ -43,7 +47,49 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 ## ⚛️ React {#react}
 
-<Todo />
+[StyleX beta](https://stylex-docusaurus-nmn.vercel.app/blog/welcome-to-stylex/)
+
+[React Router-ing Remix](https://remix.run/blog/react-routering-remix)
+
+https://twitter.com/ryanflorence/status/1588283711908327424
+
+[Remix + Shopify - Twitter Space](https://twitter.com/i/spaces/1MnxnpombqBGO)
+
+[Jamstack Community Survey 2022](https://jamstack.org/survey/2022/)
+
+https://www.netlify.com/blog/jamstack-community-survey-2022/
+
+[Valhalla Content Hub Explained](https://www.gatsbyjs.com/blog/valhalla-content-hub-explained/)
+
+- https://www.gatsbyjs.com/products/valhalla-content-hub/
+- https://github.com/gatsby-inc/valhalla-examples
+  Partial Hydration (Beta) Explained
+
+[Gatsby - Valhalla Content Hub](https://www.youtube.com/watch?v=JvHvwZZAOl0)
+
+- 👀 [React Core PR - Support Promise as a renderable node](https://github.com/facebook/react/pull/25634)
+- 💬 [Remix RFC - v2 meta API](https://github.com/remix-run/remix/discussions/4462)
+- 💬 [Remix RFC - Flat Routes](https://github.com/remix-run/remix/discussions/4482)
+- 📜 [Reduce cumulative layout shift in Docusaurus with fontaine](https://blog.logrocket.com/docusaurus-using-fontaine-reduce-cumulative-layout-shift/): la même technique utilisée par [@next/font](https://nextjs.org/blog/next-13#nextfont) peut être utilisée dans d'autres contexts pour améliorer le score CLS.
+- 📜 [Playing with Astro: Sharing State Between React and Vue Components](https://blog.bitsrc.io/playing-with-astro-sharing-state-between-react-and-vue-components-2d5abc89f4b4)
+- 📜 [Remix Simplifies Things](https://bradgarropy.com/blog/remix-simplifies-things)
+- 📜 [Implementing 3D Graphics In React](https://blog.openreplay.com/implementing-3d-graphics-in-react/)
+- 📜 [Why I Ditched Django for NextJS](https://billprin.com/2022/10/30/ditched-django-nextjs.html)
+- 📜 [What's New in Next.js 13](https://blog.appsignal.com/2022/11/02/whats-new-in-nextjs-13.html)
+- 📜 [What does CSR, SSR, SSG and ISR means and why should you care?](https://www.flavienbonvin.com/data-building-strategy-for-nextjs-app/)
+- 📜 [How to Integrate Storybook with Hydrogen](https://wemakewebsites.com/blog/devguide-how-to-integrate-storybook-with-hydrogen/)
+- 📜 [React Router 6 Deferred Fetch](https://www.infoxicator.com/react-router-6-deferred-fetch)
+- 🎨 [Taxonomy - An open source application using everything new in Next.js 13](https://github.com/shadcn/taxonomy)
+- 🐦 [scheduler.yield() - Upcoming Web API, useful for React?](https://twitter.com/sebastienlorber/status/1589939130225475584)
+- 🐦 [Next-Auth - `getServerSession()` in Server Components](https://twitter.com/shadcn/status/1589671069732196352)
+- 🧵 [Meet the new `create-next-app`](https://twitter.com/leeerob/status/1589810583444287490)
+- 🧵 [You might not need Context in Server Components in Next.js 13](https://twitter.com/sebmarkbage/status/1587615484870098945)
+- 🎥 [NextJS 13 Warning: Easy Mistake = Infinite Loops](https://www.youtube.com/watch?v=zwQs4wXr9Bg)
+- 📦 [React-Three-Next - updated to Next.js v13](https://twitter.com/onirenaud/status/1587830274175295488)
+- 📦 [Redux ToolKit 1.9](https://github.com/reduxjs/redux-toolkit/releases/tag/v1.9.0)
+- 📦 [derive-zustand](https://github.com/dai-shi/derive-zustand/)
+- 📦 [Generouted 1.6 - file-based routes for Vite](https://twitter.com/oedotme/status/1589720850051522561)
+- 📦 [udomsay - A stricter, signals driven, JSX based library](https://github.com/WebReflection/udomsay)
 
 <SubscribeFormEmbed />
 
@@ -71,7 +117,20 @@ N'hésitez pas à aller voir notre site [premieroctet.com](https://www.premieroc
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+Expo 47?
+
+- 💬 [RFC: Metro package exports support](https://github.com/react-native-community/discussions-and-proposals/pull/534) + [Node.js - define "react-native" community condition](https://github.com/nodejs/node/pull/45367)
+- 💬 [RFC: Vision for Layout Conformance/Parity](https://github.com/react-native-community/discussions-and-proposals/pull/540/)
+- 📜 [Introducing End-to-end Security to EAS Update with Code Signing](https://blog.expo.dev/introducing-end-to-end-security-to-eas-update-with-code-signing-b6a14d0d88d4) + https://twitter.com/expo/status/1588581041706393601
+- 📦 [React-Native 0.71 RC.0](https://twitter.com/CipolleschiR/status/1588578757857533952)
+- 📦 [Storybook-Solito](https://github.com/dannyhw/storybook-solito)
+- 🐛 [Build failures on Android](https://twitter.com/reactnative/status/1589296764678705155) + https://twitter.com/reactnative/status/1589394317126565888
+- 📜 [Migrating a React Native Library to the New Architecture](https://www.callstack.com/blog/migrating-a-react-native-library-to-the-new-architecture) + https://twitter.com/thymikee/status/1588217358925053955
+- 🎉 [React-Native - Use TypeScript by default for new applications](https://github.com/facebook/react-native/pull/35165)
+- 📜 [Flutter vs. React Native: Which is the right cross-platform framework for you?](https://stackoverflow.blog/2022/10/31/comparing-frameworks-for-cross-platform-apps-flutter-vs-react-native/)
+- 🎙️ [RNR 251 - Examining React Native 0.70](https://reactnativeradio.com/episodes/rnr-251-examining-react-native-070)
+- 🎥 [React-Native and Bluetooth Low Energy ( BLE ) - Send and Receive Data](https://www.youtube.com/watch?v=jeH2QmZ8T14)
+- 🎥 [Animated FlatList in React Native](https://www.youtube.com/watch?v=3ox0R5jPb04)
 
 ---
 
@@ -98,7 +157,9 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Recapt Octobre 2022](https://buchet.tech/blog/recapt-octobre-2022)
+- [Top 5 Des Erreurs de Hooks React que les débutants font](https://www.youtube.com/watch?v=YmpRcPq9enc)
+- [Pourquoi je n'utilise pas Redux... et tu ne Devrais pas aussi !](https://www.youtube.com/watch?v=IAKln-XQjlQ)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -108,10 +169,38 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Announcing Rome v10](https://rome.tools/blog/2022/11/08/rome-10.html): première release stable de la toolchain Rome, qui propose de remplacer ESLint/Prettier par une alternative Rust plus rapide et simple à utiliser. Ce qui m'attire le plus, ce n'est pas la vitesse mais surtout la partie sur le Error Recovery et les messages d'erreur.
+- [Introducing the CodeSandbox GitHub App](https://codesandbox.io/post/introducing-the-codesandbox-github-app): propose une intégration pour faciliter les contributions et la review de pull-requests. Cela rappelle [StackBlitz Codeflow](https://stackblitz.com/codeflow) lancé récemment, mais avec une technologie assez différente.
+- [Jest over Vitest](https://bradgarropy.com/blog/jest-over-vitest)
+- [Vitest 0.25](https://github.com/vitest-dev/vitest/releases/tag/v0.25.0): permet d'écrire des tests pour ses types TypeScript
+- [TanStack Query for Angular](https://twitter.com/NetanelBasal/status/1587704203178295297): React-Query est progressivement porté sur d'autres frameworks
+- [Xata - Serverless Data Platform for modern web builders](https://twitter.com/xata/status/1587794475274969088)
+- [Safari Technology Preview 157](https://webkit.org/blog/13575/release-notes-for-safari-technology-preview-157/)
+- [ESLint - consistent-type-imports](https://github.com/typescript-eslint/typescript-eslint/pull/5050)
+- [Client-side Routing without the JavaScript](https://dev.to/this-is-learning/client-side-routing-without-the-javascript-3k1i)
+- [Performance: Rust and its relationship with Node.js](https://sprkl.dev/performance-rust-node-js/)
+- [TypeScript PR - Convert TypeScript to modules](https://github.com/microsoft/TypeScript/pull/51387)
+- [What is a realm in JavaScript?](https://weizman.github.io/page-what-is-a-realm-in-js/)
+- [Tailwind CSS turns 5 years old](https://twitter.com/adamwathan/status/1587128677724291074)
+- [New to the web platform in October](https://web.dev/web-platform-10-2022/)
+- [Protobuf-ES: The Protocol Buffers TypeScript/JavaScript runtime we all deserve](https://buf.build/blog/protobuf-es-the-protocol-buffers-typescript-javascript-runtime-we-all-deserve)
+- [ESLint v8.27](https://eslint.org/blog/2022/11/eslint-v8.27.0-released/)
+- [Node.js - drop fetch experimental warning](https://twitter.com/matteocollina/status/1588966117393203203)
+- [Node.js - Nov 3 2022 Security Releases](https://nodejs.org/en/blog/vulnerability/november-2022-security-releases/)
+- [Playwright now has new getBy APIs](https://dev.to/playwright/playwright-now-has-new-getby-apis-1iad)
 
 ---
 
 ## 🤭 Fun {#fun}
+
+https://twitter.com/LOWCOSTCOSPLAY/status/1586696155630800899
+
+https://twitter.com/swmansion/status/1589571114048851968
+
+https://twitter.com/QwikDev/status/1589533407297404928
+
+https://twitter.com/QwikDev/status/1588098017139490818
+
+https://twitter.com/deno_land/status/1587826557455716352
 
 [![](/emails/issues/122/meme.jpg)](https://twitter.com/TODO)
